fix: fix flickering that happens when "summary" element is clicked

--- a/Help Center/style.css
+++ b/Help Center/style.css
@@ -12,6 +12,7 @@ body {
     font-family: 'Muli', sans-serif;
     margin: 0;
     background: hsl(220, 50%, 98%);
+    overflow-y: scroll;
 }
 
 main {
